--- a/Web-Developer-Course/Dungeon/antri_creatures.html
+++ b/Web-Developer-Course/Dungeon/antri_creatures.html
@@ -2,84 +2,59 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>antri-cratures</title>
+    <title>antri-creatures</title>
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--<link href="../jquery_ui/jquery-ui.css" rel="stylesheet">-->
+    <link rel="icon" href="images/old shield_item.png" />
+    <link href="../jquery_ui/jquery-ui.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
     </script>
-    <!--<script src="../jquery_ui/jquery-ui.js"></script>-->
-    <script src="antriScript.js"></script>
+    <script src="../jquery_ui/jquery-ui.js"></script>
+    <script src="antriRaceScript.js"></script>
     <link rel="stylesheet" type="text/css" href="antriStyle.css">
+    <!--animate on scroll library-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-home">
         <div class="container-fluid">
-            <a class="navbar-brand mx-3" href="#">Logo</a>
+            <a class="navbar-brand ms-3" href="antri_home.html">
+                <img src="images/old_shield_item.png" alt="logo" width="40" height="40" />
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <!--<span class="navbar-toggler-icon"></span>-->
+                <img src="images/old_shield_item.png" alt="logo" width="30" height="30" />
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item mx-3">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <ul class="navbar-nav abs-center-x">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="antri_home.html">Home</a>
                     </li>
-                    <li class="nav-item dropdown mx-3">
+                    <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="raceDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Race
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Humans</a></li>
-                            <li><a class="dropdown-item" href="antri_elf.html">Elves</a></li>
-                            <li><a class="dropdown-item" href="#">Dwarves</a></li>
+                            <li><a class="dropdown-item" href="antri_human.html">Human</a></li>
+                            <li><a class="dropdown-item" href="antri_elf.html">Elf</a></li>
+                            <li><a class="dropdown-item" href="antri_dwarf.html">Dwarf</a></li>
+                            <li><a class="dropdown-item" href="antri_halfling.html">Halfling</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown mx-3">
-                        <a class="nav-link dropdown-toggle" href="#" id="creatureDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Creatures/Widlife
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="antri_creatures.html">Wildlife</a>
                     </li>
-                    <li class="nav-item dropdown mx-3">
-                        <a class="nav-link dropdown-toggle" href="#" id="organizationDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Organization
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="antri_map.html">World</a>
                     </li>
-                    <li class="nav-item dropdown mx-3">
-                        <a class="nav-link dropdown-toggle" href="#" id="worldDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            World
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown mx-3">
-                        <a class="nav-link dropdown-toggle" href="#" id="dietyDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Deities
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="antri_deity.html">Deities</a>
                     </li>
                 </ul>
 
@@ -87,24 +62,28 @@
         </div>
     </nav>
 
-    <div class="text-center mt-5">
-        <h1>Dr.Whatever's compedium</h1>
+    <div class="text-center creature-container">
+        <h1>Oyster Chec's Compedium</h1>
     </div>
 
     <!--carousel-->
     <div class="container carousel-container mt-3 mb-3">
         <div class="row center">
-            <div class="col-sm-8">
+
+            <div class="col-sm-10">
                 <div id="creature_carousel" class="carousel carousel-dark slide" data-bs-interval="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="img-fluid d-block w-100" src="images/test_creature.png" alt="...">
+                            <img class="img-fluid d-block w-100" src="images/creatures_intro.png" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img class="img-fluid d-block w-100" src="images/test_creature.png" alt="...">
+                            <img class="img-fluid d-block w-100" src="images/creatures_mandrake.png" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img class="img-fluid d-block w-100" src="images/test_creature.png" alt="...">
+                            <img class="img-fluid d-block w-100" src="images/creatures_geckobear.png" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="img-fluid d-block w-100" src="images/creatures_shade.png" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#creature_carousel" data-bs-slide="prev">
@@ -117,39 +96,46 @@
                     </button>
                 </div>
             </div>
+
         </div>
     </div>
 
 
     <div class="container">
         <div class="row">
-            <div data-aos="fade-left" class="col mt-5">
+            <div data-aos="fade-left" class="col mt-5 mb-5">
                 <h3 class="fst-italic">
-                    "There is always creatures to befriend and adventure to discover"
+                    "It's gonna take me ages to write about all the creatures I have encountered"
                 </h3>
-                <p class="fst-italic text-end">-Hall Rootgrass, adventurer</p>
+                <p class="fst-italic text-end">-Oyster Chec, Halfling Warlock</p>
 
                 <p class="mt-3 ms-3">
-                    Elves are a fascinating race of people. Even putting aside their culture and history, they are a biological marvel.
-                    They were originally spirits handcrafted by the goddesss Herna, but after the great explosion, slowly began to resemble humans and their form. Currently,
-                    their outward apperance is almost indistinguisable from a human besides their signature pointed ears.
+                    The Hemiad Explosion changed every aspect of the world, including the creatures and plants inhabiting the world. While many explorers and scientists study the world and
+                    its inhabitants, there is still a countless number of them to be discoverd. So the next time you explore the dark caves and the tallest mountains, keep your eyes peeled,
+                    because you might come across a creature you have never seen before.
                 </p>
                 <p class="mt-3 ms-3">
-                    The most famous trait of Elves (besides their ear) is longevity. Elves do not age like humans or halflings. Once reaching
-                    adulthood their physical appearance does not change. They are by no means immortal, as they are susceptible to wounds and diseases
-                    just like humans and halflings, but they do possess a much faster regenerative rate. Scholars believe this regenerative power to be the cause
-                    for elves inability to age. They also possess an incredible appetite, which started a common misconception that they are vegetarians, as most elves
-                    cannot simply afford a diet that consists of meat without emptying their savings by the end of the week.
+                    Although the world is brimming with friendly and docile creatures, dangers lurk as well. Creatures that disobey the natural order of the world, and
+                    pose danger to people are commonly referred to as monsters. Monster often resemble a twisted and demented version of existing creatures, and sometimes
+                    even take a shape akin to that of a human. Most monsters are active and hunting at night, so try not to roam around at night, unless you are a hunter or an explorer
+                    brave enough to hunt down a monster in its den.
                 </p>
 
-                <p class="mt-3 ms-3">
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                </p>
             </div>
         </div>
     </div>
+
+    <footer class="footer-home text-center text-lg-start">
+        <div class="text-center p-3">
+            Contact me at: jkjaykang@gmail.com
+        </div>
+    </footer>
+
+    <!--Animate on Scroll initialization-->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
