--- a/Web-Developer-Course/Dungeon/antri_human.html
+++ b/Web-Developer-Course/Dungeon/antri_human.html
@@ -21,14 +21,17 @@
 </head>
 <body>
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-home">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand ms-3" href="antri_home.html">
+                <img src="images/old_shield_item.png" alt="logo" width="40" height="40" />
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <!--<span class="navbar-toggler-icon"></span>-->
+                <img src="images/old_shield_item.png" alt="logo" width="30" height="30" />
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav abs-center-x">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="antri_home.html">Home</a>
                     </li>
@@ -37,46 +40,21 @@
                             Race
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Humans</a></li>
-                            <li><a class="dropdown-item active" href="#">Elves</a></li>
-                            <li><a class="dropdown-item" href="#">Dwarves</a></li>
+                            <li><a class="dropdown-item active" href="antri_human.html">Human</a></li>
+                            <li><a class="dropdown-item" href="antri_elf.html">Elf</a></li>
+                            <li><a class="dropdown-item" href="antri_dwarf.html">Dwarf</a></li>
+                            <li><a class="dropdown-item" href="antri_halfling.html">Halfling</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="antri_creatures.html">Wildlife</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="organizationDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Organization
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="antri_map.html">World</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="worldDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            World
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dietyDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Deities
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="antri_deity.html">Deities</a>
                     </li>
                 </ul>
 
@@ -87,36 +65,36 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-8 mt-5">
-                <h1 class="intro-header ms-5">Humans</h1>
+                <h1 class="intro-header ms-5">Human</h1>
                 <hr />
             </div>
         </div>
         <div class="row">
-            <div data-aos="fade-in" class="col-sm-5 text-center">
+            <div data-aos="zoom-in" class="col-md-5 text-center">
                 <img class="img-fluid" id="body_illus" src="images/human_hall.png" />
                 <p class="fw-bold">Hall Lightroot, human adventurer</p>
             </div>
             <div data-aos="fade-left" class="col mt-5">
                 <h3 class="fst-italic">
-                    "Humans are like a box of choclates, except sometimes the chocolates are truffles or a vial of acid."
+                    "Humans may be a byproduct of the Hemiad Explosion, but they are now a driving force of the world that remains."
                 </h3>
-                <p class="fst-italic text-end">-Hall Rootgrass, adventurer</p>
+                <p class="fst-italic text-end">-Gram, dwarven lorekeeper</p>
 
                 <p class="mt-3 ms-3">
-                    Humans are a race that came to be after the great explosion, and the most numerous of the races. Humans are diverse as they are numerous, but they tend to
-                    be taller than halflings and dwarves, and a bit shorter than elves. Humans live to be around 60, but due to their curious and ambitious nature, tend to be a subject
-                    of premature death more than other races. While they may lack deep rooted history compared to other races, there is no denying of wonderous cities and creations humans
-                    have built in such a short time.
+                    Humans are a race that came to be after the Hemiad Explosion, and the most numerous of the races. As humans were not crafted by a deity, they do not have a strong bond or connection
+                    to any particular deity. Humans are diverse as they are numerous, but they tend to be taller than halflings and dwarves, and a bit shorter than elves. Humans live to be around 60,
+                    but due to their curious and ambitious nature, they are a subject to a premature death more than other races.
                 </p>
                 <p class="mt-3 ms-3">
-                    Humans are diverse in their personality, but most humans tend to be polite and tact, and has no problem getting along with other races. Humans
-                    are also extremly protective and loyal to things and people they regard important, which can lead to conflicts. Due to their diverse personality and morals, other races
-                    can sometimes have trouble warming up to a human, as they are not as skilled as discerning a human's true personality. Despite this, humans often rank the highest
-                    in the census of "Non-humans, what race is your best friend?".
+                    Although each human's personality is unique, most tend to be polite and tact, and has very little trouble getting along with other races. Humans enjoy exploring and has no problem
+                    settling in new areas, but develop strong attachments to people and places they have spent a long time around. They can become overprotective of what they consider important or dear
+                    to them, leading to conflicts.
                 </p>
 
                 <p class="mt-3 ms-3">
-                    
+                    Ambitions can grasp a human harder than any other race. While this ambition have led to advancements of humankind at an unthinkable phase, it has also consumed many humans, leading to
+                    creation of many tyrants and villains. In fact, while there have been criminals of every race, villains that have marked their name in history have almost always been a human.
+
                 </p>
             </div>
         </div>
@@ -124,66 +102,38 @@
         <div class="row">
             <div data-aos="fade-right" class="col mt-5">
                 <h3 class="fst-italic">
-                    "Elves mastery and knowledge of magic is vast, too vast."
+                    "Every race makes stories, humans make them worth listening to"
                 </h3>
-                <p class="fst-italic text-end">-Hall Rootgrass, adventurer</p>
+                <p class="fst-italic text-end">-Vera Daran, elven mage</p>
 
                 <p class="mt-3 ms-3">
-                    Elves are a fascinating race of people. Even putting aside their culture and history, they are a biological marvel.
-                    They were originally spirits handcrafted by the goddesss Herna, but after the great explosion, slowly began to resemble humans and their form. Currently,
-                    their outward apperance is almost indistinguisable from a human besides their signature pointed ears.
+                    If there is one thing that sets apart humans from the other race, it is their ability to make something entertaining. Humans are authors
+                    of plays, songs, and stories that are retold and loved by all races. A gifted human can retell the dullest stories as if it was an epic tale
+                    and a skilled human musican enchants the whole crowd at a tavern or a concert. Many human settlement holds festivals that hosts plays and sells
+                    the latest novels by renowned actors.
                 </p>
                 <p class="mt-3 ms-3">
-                    The most famous trait of Elves (besides their ear) is longevity. Elves do not age like humans or halflings. Once reaching
-                    adulthood their physical appearance does not change. They are by no means immortal, as they are susceptible to wounds and diseases
-                    just like humans and halflings, but they do possess a much faster regenerative rate. Scholars believe this regenerative power to be the cause
-                    for elves inability to age. They also possess an incredible appetite, which started a common misconception that they are vegetarians, as most elves
-                    cannot simply afford a diet that consists of meat without emptying their savings by the end of the week.
+                    While human authors and bards make every heroic tale worth remembering, they also have a tendency to stretch the truth a bit. People are often
+                    disappointed that the real details of an event or a character may not be as grand as what the tunes and stories have made it out to be. But what can
+                    you do? That's entertainment!
                 </p>
 
 
             </div>
-            <div data-aos="fade-in" class="col-sm-5 text-center">
-                <img class="img-fluid" src="images/elf_magic.png" />
-                <p class="fw-bold">test image, test caption</p>
+            <div data-aos="zoom-in-left" class="col-md-5 text-center">
+                <img class="img-fluid" src="images/human_story.png" />
+                <p class="fw-bold">Humans entertain and create in many forms</p>
             </div>
         </div>
 
-        <div class="row">
-            <div data-aos="fade-in" class="col-sm-5 text-center">
-                <img class="img-fluid" src="images/elf_crest.png" />
-                <p class="fw-bold">test image, test caption</p>
-            </div>
-
-            <div data-aos="fade-left" class="col mt-5">
-                <h3 class="fst-italic">
-                    "People always look up to Elves for being master magicians and whatnot,
-                    but if you get to live that long, you <span class="fw-bold">have</span> to be a master at something"
-                </h3>
-                <p class="fst-italic text-end">-Hall Rootgrass, adventurer</p>
-
-                <p class="mt-3 ms-3">
-                    Elves are a fascinating race of people. Even putting aside their culture and history, they are a biological marvel.
-                    They were originally spirits handcrafted by the goddesss Herna, but after the great explosion, slowly began to resemble humans and their form. Currently,
-                    their outward apperance is almost indistinguisable from a human besides their signature pointed ears.
-                </p>
-                <p class="mt-3 ms-3">
-                    The most famous trait of Elves (besides their ear) is longevity. Elves do not age like humans or halflings. Once reaching
-                    adulthood their physical appearance does not change. They are by no means immortal, as they are susceptible to wounds and diseases
-                    just like humans and halflings, but they do possess a much faster regenerative rate. Scholars believe this regenerative power to be the cause
-                    for elves inability to age. They also possess an incredible appetite, which started a common misconception that they are vegetarians, as most elves
-                    cannot simply afford a diet that consists of meat without emptying their savings by the end of the week.
-                </p>
-            </div>
-        </div>
     </div>
 
-    <footer class="footer mt-auto py-3 bg-light">
-        <div class="container-fluid">
-            <p>@github jkjaykang</p>
+    <!--Footer-->
+    <footer class="footer-home text-center text-lg-start">
+        <div class="text-center p-3">
+            Contact me at: jkjaykang@gmail.com
         </div>
     </footer>
-    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
