--- a/Web-Developer-Course/Dungeon/antri_home.html
+++ b/Web-Developer-Course/Dungeon/antri_home.html
@@ -100,7 +100,7 @@
     <div class="container">
         <div class="row center">
             <div class="card m-5" style="width: 22rem;">
-                <img id="blacksmith_card" src="images/blacksmith_website.png" class="card-img-top img-fluid mt-2" alt="blacksmith_website">
+                <img id="blacksmith_card" src="images/blacksmith_website.PNG" class="card-img-top img-fluid mt-2" alt="blacksmith_website">
                 <div class="card-body">
                     <h5 class="card-title">Ita's Blacksmith</h5>
                     <p class="card-text">
@@ -114,7 +114,7 @@
             </div>
 
             <div class="card m-5" style="width: 22rem;">
-                <img src="images/blacksmith_website.png" class="card-img-top img-fluid mt-2" alt="blacksmith_website">
+                <img src="images/blacksmith_website.PNG" class="card-img-top img-fluid mt-2" alt="blacksmith_website">
                 <div class="card-body">
                     <h5 class="card-title">Ita's Blacksmith</h5>
                     <p class="card-text">
@@ -130,7 +130,7 @@
 
         <div class="row center">
             <div class="card m-5" style="width: 22rem;">
-                <img src="images/blacksmith_website.png" class="card-img-top img-fluid mt-2" alt="blacksmith_website">
+                <img src="images/blacksmith_website.PNG" class="card-img-top img-fluid mt-2" alt="blacksmith_website">
                 <div class="card-body">
                     <h5 class="card-title">Ita's Blacksmith</h5>
                     <p class="card-text">
@@ -144,7 +144,7 @@
             </div>
 
             <div class="card m-5" style="width: 22rem;">
-                <img src="images/blacksmith_website.png" class="card-img-top img-fluid mt-2" alt="blacksmith_website">
+                <img src="images/blacksmith_website.PNG" class="card-img-top img-fluid mt-2" alt="blacksmith_website">
                 <div class="card-body">
                     <h5 class="card-title">Ita's Blacksmith</h5>
                     <p class="card-text">
